galley/pkg/config/analysis/analyzers/testdata/serviceentry-https-on-http-port.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-01 # Expected: validation error
  namespace: default
spec:
  hosts:
  - test-01.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-02  # Expected: no validation error
  namespace: default
spec:
  hosts:
  - test-02.istio.io
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-03 # Expected: validation error
  namespace: default
spec:
  hosts:
  - test-03.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-test-03
spec:
  host: test-03.istio.io
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-04 # Expected: no validation error
  namespace: default
spec:
  hosts:
  - test-04.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-test-04
spec:
  host: test-04.istio.io
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-05 # Expected: no validation error
  namespace: default
spec:
  hosts:
  - test-05.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
    targetPort: 80
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-06 # Expected: validation error
  namespace: default
spec:
  hosts:
  - test-06.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
    targetPort: 443
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-07 # Expected: no validation error
  namespace: default
spec:
  hosts:
  - test-07.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
    targetPort: 443
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-test-07
spec:
  host: test-07.istio.io
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-08 # Expected: validation error
  namespace: default
spec:
  hosts:
  - test-08.istio.io
  ports:
  - number: 443
    name: http
    protocol: HTTP
    targetPort: 443
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-test-08
spec:
  host: test-08.istio.io
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-09 # Expected: validation error
  namespace: default
spec:
  hosts:
  - test-09.istio.io
  ports:
  - number: 8443
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-10 # Expected: no validation error
  namespace: default
spec:
  hosts:
  - test-10.istio.io
  ports:
  - number: 8443
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-test-10
spec:
  host: test-10.istio.io
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8443
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-11 # Expected: no validation error
  namespace: default
spec:
  hosts:
  - test-11.istio.io
  ports:
  - number: 8443
    name: http
    protocol: HTTP
    targetPort: 80
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-test-12 # Expected: validation error
  namespace: default
spec:
  hosts:
  - test-12.istio.io
  ports:
  - number: 8443
    name: http
    protocol: HTTP
    targetPort: 443
  resolution: DNS
